# Stream-Clip-Preprocess

./: .gitignore  CLAUDE.md  plan.md  pyproject.toml  stream_clip_preprocess.spec  todos.md
.github/workflows/: ci-cd.yml
src/python_template/: cli.py
src/stream_clip_preprocess/: __init__.py  __main__.py  cache.py  cli.py  clipper.py  downloader.py  ffmpeg.py  models.py  sanitize.py  settings.py  transcript.py
src/stream_clip_preprocess/commands/: __init__.py  gui.py  version.py
src/stream_clip_preprocess/gui/: __init__.py  app.py  scroll.py  state.py  themes.py  widgets.py
src/stream_clip_preprocess/llm/: __init__.py  base.py  local.py  openrouter.py
tests/: conftest.py  test_cache.py  test_cli.py  test_clipper.py  test_downloader.py  test_ffmpeg.py  test_gui.py  test_integration.py  test_llm.py  test_logging.py  test_models.py  test_settings.py  test_transcript.py  test_version.py
